--- a/1st_project.ipynb
+++ b/1st_project.ipynb
@@ -202,12 +202,470 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hamza 123 32.0 False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hamza\" , 123 , 32.0,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hamza<<>>123<<>>32.0<<>>False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hamza\" , 123 , 32.0,False,sep=\"<<>>\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\tJava\t\tC#JavaScript\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Python\",end=\"\\t\") #escape Characters\n",
+    "print(\"Java\",end=\"\\t\\t\")\n",
+    "print(\"C#\",end=\"\")\n",
+    "print(\"JavaScript\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is name and my age is age\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 30\n",
+    "name = \"Ammar\"\n",
+    "\n",
+    "print(\"My name is name and my age is age\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-d767c1ba78ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"My name is\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"and my age is\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is\"+ name + \"and my age is\" + age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Ammar and my age is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is \"+ name + \" and my age is \" + str(age)) #typecasting\n",
+    "#singlesentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is  Ammar  and my age is  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is \",name,\" and my age is \",age) #4differentvalues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:34\n",
+      "Enter your name:Hamza\n",
+      "My name is  Hamza  and my age is  34\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter your age: \")) #we typecasted the age(str) to int\n",
+    "name = input(\"Enter your name: \")\n",
+    "print(\"My name is \",name,\" and my age is \",age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = input() #user input will always be string\n",
+    "\n",
+    "type(age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#String formatting using python's   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 54\n",
+      "It's an even\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter Number: \"))\n",
+    "rem = num % 2\n",
+    "if rem == 0:\n",
+    "    print(\"It's an even\")\n",
+    "else:\n",
+    "    print(\"It's an odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you have a NIC card: haan\n",
+      "Ok!\n",
+      "Is your name availible in voter list: haan\n",
+      "Ok!\n",
+      "Mubarak Ho! Aap Vote Cast krskte hain....\n"
+     ]
+    }
+   ],
+   "source": [
+    "card = input(\"Do you have a NIC card: \")\n",
+    "\n",
+    "if card == \"haan\":\n",
+    "    print(\"Ok!\")\n",
+    "    voterlist = input(\"Is your name availible in voter list: \")\n",
+    "    if voterlist == \"haan\":\n",
+    "        print(\"Ok!\")\n",
+    "        print(\"Mubarak Ho! Aap Vote Cast krskte hain....\")\n",
+    "    else:\n",
+    "       print(\"Ghar jao chai shai peeyo!\")         \n",
+    "else:\n",
+    "    print(\"Ghar jao chai shai peeyo!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Hamza\n",
+      "Enter your age:17\n",
+      "my name is Hamza and my age is 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1=input(\"Enter your name: \")\n",
+    "age1=int(input(\"Enter your age:\" ))\n",
+    "\n",
+    "print(\"my name is {0} and my age is {1}\".format(name1,age1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 6\n",
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "#this program prints the factorial of the input number\n",
+    "f = 1\n",
+    "a = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "if a > 1:\n",
+    "    while a > 1:\n",
+    "        f = f * a\n",
+    "        a = a - 1\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hamza\" , 123 , 32.0)"
+    "__str__=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [4, 2, 2, 4, 5, 2, 1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 2, 2, 4, 4, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 2]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Amir', 'Bear', 'Charlton', 'Daman']\n",
+    "print(names[-1][-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_of_courses = [None] * 5\n",
+    "information ={} \n",
+    "sample = {\"name\": \"\", \"father_name\": \"\", \"class\": \"\", \"roll_no\": \"\", \"courses\": no_of_courses ,}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information[0] = [sample]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: [{'name': '',\n",
+       "   'father_name': '',\n",
+       "   'class': '',\n",
+       "   'roll_no': '',\n",
+       "   'courses': [None, None, None, None, None]}]}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -215,6 +673,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
