--- a/25-MAY-2019.ipynb
+++ b/25-MAY-2019.ipynb
@@ -150,20 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-ab42c7105d11>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-ab42c7105d11>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    IO=ctrl + /(forward slash)\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'SDSDFFD\\nSDS\\nDS\\nS\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ctrl + /(forward slash) \n",
+    "#ctrl + /(forward slash) \n",
     "#comment\n",
     "#print(\"Hello\")\n",
     "#print(\"Hello\")\n",
